<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView android:id="@+id/Intro_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro_text"
        android:gravity="center"
        />

    <RadioGroup android:id="@+id/radio_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Intro_view"
        >


        <RadioButton android:id="@+id/high_button_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high"
            android:checked="true"
            />

        <RadioButton android:id="@+id/mid_button_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mid"/>

        <RadioButton android:id="@+id/low_button_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low"

            />

    </RadioGroup>



    <EditText   android:id="@+id/bill_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_view"
        android:inputType="numberDecimal"
        android:hint="enter bill please.. "
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio_view"
        android:layout_toRightOf="@id/bill_view"
        android:text="@string/submit"
        android:onClick="findTip"
        />


    <TextView android:id="@+id/ans_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_below="@+id/bill_view"
        />

    <EditText android:id="@+id/final_response_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ans_view"
        android:gravity="center"

        />

    <EditText android:id="@+id/Waiter_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/final_response_view"
        android:gravity="center"

        />

    <Button android:id="@+id/split_bill_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Waiter_message"
        android:text="@string/splitter"
        android:onClick="splitBill"
        android:gravity="center"
        />

</RelativeLayout>
